css: Fix uniboard on pages without --gauge-gap

--- a/ui/common/css/abstract/_uniboard.scss
+++ b/ui/common/css/abstract/_uniboard.scss
@@ -14,32 +14,26 @@ $col3-uniboard-table-min: 240px;
 $col3-uniboard-table: Minmax(#{$col3-uniboard-table-min}, 400px);
 $col3-uniboard-controls: 3rem;
 
-$col3-uniboard-min-size: 200px;
 $col3-uniboard-max-width: calc(
-  100vw - #{$col3-uniboard-side-min} - #{$block-gap} - var(--gauge-gap, 0) - #{$col3-uniboard-table-min} - 2 * var(--main-margin, 0)
+  100vw - #{$col3-uniboard-side-min} - #{$block-gap} - var(--gauge-gap, 0px) - #{$col3-uniboard-table-min} - 2 * var(--main-margin, 0px)
 );
 $col3-uniboard-max-height: calc(100vh - #{$site-header-outer-height} - #{$col3-uniboard-controls});
 $col3-uniboard-max-size: Min(#{$col3-uniboard-max-width}, #{$col3-uniboard-max-height});
-$col3-uniboard-preferred-size: calc(#{$col3-uniboard-max-size} * var(--board-scale));
-$col3-uniboard-width: Max(#{$col3-uniboard-min-size}, #{$col3-uniboard-preferred-size});
+$col3-uniboard-width: calc(#{$col3-uniboard-max-size} * var(--board-scale));
 
 $uniboard-default-scale: 0.9;
 
 // zoom: 85%
-$col3-uniboard-default-preferred-size: calc(#{$col3-uniboard-max-size} * #{$uniboard-default-scale});
-$col3-uniboard-default-width: Max(#{$col3-uniboard-min-size}, #{$col3-uniboard-default-preferred-size});
+$col3-uniboard-default-width: calc(#{$col3-uniboard-max-size} * #{$uniboard-default-scale});
 
 $col2-uniboard-table: $col3-uniboard-table;
 $col2-uniboard-controls: $col3-uniboard-controls;
-$col2-uniboard-min-size: $col3-uniboard-min-size;
-$col2-uniboard-max-width: calc(100vw - var(--gauge-gap, 0) - #{$col3-uniboard-table-min} - 2 * var(--main-margin, 0));
+$col2-uniboard-max-width: calc(100vw - var(--gauge-gap, 0px) - #{$col3-uniboard-table-min} - 2 * var(--main-margin, 0px));
 $col2-uniboard-max-height: $col3-uniboard-max-height;
 $col2-uniboard-max-size: Min(#{$col2-uniboard-max-width}, #{$col2-uniboard-max-height});
-$col2-uniboard-preferred-size: calc(#{$col2-uniboard-max-size} * var(--board-scale));
-$col2-uniboard-width: Max(#{$col2-uniboard-min-size}, #{$col2-uniboard-preferred-size});
+$col2-uniboard-width: calc(#{$col2-uniboard-max-size} * var(--board-scale));
 
-$col2-uniboard-default-preferred-size: calc(#{$col2-uniboard-max-size} * #{$uniboard-default-scale});
-$col2-uniboard-default-width: Max(#{$col2-uniboard-min-size}, #{$col2-uniboard-default-preferred-size});
+$col2-uniboard-default-width: calc(#{$col2-uniboard-max-size} * #{$uniboard-default-scale});
 
 $col2-uniboard-squeeze-table: minmax(200px, 240px);
 $col2-uniboard-squeeze-width: minmax(calc(55vmin), calc(100vh - #{$site-header-outer-height} - #{$block-gap}));
